feat: create header structure

--- a/inex.html
+++ b/inex.html
@@ -13,6 +13,35 @@
 </head>
 
 <body>
+    <!-- inizio header -->
+    <header>
+        <nav>
+            <div class="nav-sx">
+                <ul>
+                    <li><img src="img/logo-small.png" alt="logo-dropbox"></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e Prezzi</a></li>
+                </ul>
+            </div>
+            <div class="nav-dx">
+                <ul>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li>
+                        <div>
+                            <a href="#">Accedi</a>
+                            <a href="#">inizia</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- inizio main -->
+    <main></main>
+    <!-- inizio footer -->
+    <footer></footer>
 </body>
 
 </html>
