feat: jumbotron structure test 1

--- a/inex.html
+++ b/inex.html
@@ -39,7 +39,17 @@
         </nav>
     </header>
     <!-- inizio main -->
-    <main></main>
+    <main>
+        <section class="jumbotron">
+            <div class="container-jumbo">
+                <div class="jumbo-up"></div>
+                <div class="jumbo-down">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- inizio footer -->
     <footer></footer>
 </body>
