feat: create section 2 structure test 1

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
                 </div>
             </div>
         </section>
+
+        <!-- seconda sezione -->
+         <section class="container container-2">
+            <div class="period"></div>
+            <div class="schede">
+                <div class="piano"></div>
+                <div class="piano"></div>
+                <div class="piano"></div>
+            </div>
+         </section>
+
+          <!-- terza sezione -->
+           <section>
+            <div></div>
+           </section>
     </main>
     <!-- inizio footer -->
     <footer></footer>
