--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
          </section>
 
           <!-- terza sezione -->
-           <section>
-            <div></div>
+           <section class="section-3">
+            <div class="container-3"></div>
            </section>
     </main>
     <!-- inizio footer -->
