feat: create section 4 structure test 1

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
            <section class="section-3">
             <div class="container-3"></div>
            </section>
+
+           <!-- quarta sezione -->
+           <section class="section-4">
+            <div class="container container-4">
+                <div class="foto"></div>
+                <div class="partner"></div>
+            </div>
+           </section>
+
+           <!-- quinta sezione -->
     </main>
     <!-- inizio footer -->
     <footer></footer>
