--- a/index.html
+++ b/index.html
@@ -51,29 +51,44 @@
         </section>
 
         <!-- seconda sezione -->
-         <section class="container container-2">
-            <div class="period"></div>
-            <div class="schede">
-                <div class="piano"></div>
-                <div class="piano"></div>
-                <div class="piano"></div>
+        <section>
+            <div class="container container-2-5">
+                <div class="period"></div>
+                <div class="schede">
+                    <div class="piano"></div>
+                    <div class="piano"></div>
+                    <div class="piano"></div>
+                </div>
             </div>
-         </section>
+        </section>
 
-          <!-- terza sezione -->
-           <section class="section-3">
+        <!-- terza sezione -->
+        <section class="section-3">
             <div class="container-3"></div>
-           </section>
+        </section>
 
-           <!-- quarta sezione -->
-           <section class="section-4">
+        <!-- quarta sezione -->
+        <section class="section-4">
             <div class="container container-4">
                 <div class="foto"></div>
                 <div class="partner"></div>
             </div>
-           </section>
+        </section>
 
-           <!-- quinta sezione -->
+        <!-- quinta sezione -->
+        <section>
+            <div class="container container-2-5">
+                <div class="titolo"></div>
+                <div class="griglia">
+                    <div class="operazioni"></div>
+                    <div class="operazioni"></div>
+                    <div class="operazioni"></div>
+                    <div class="operazioni"></div>
+                    <div class="operazioni"></div>
+                    <div class="operazioni"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- inizio footer -->
     <footer></footer>
