--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                 </div>
             </div>
         </section>
+
+        <!-- sesta sezione -->
+         <section class="section-6">
+            <div class="container-6"></div>
+         </section>
     </main>
     <!-- inizio footer -->
     <footer></footer>
