feat: create footer structure test 1

--- a/index.html
+++ b/index.html
@@ -96,7 +96,18 @@
          </section>
     </main>
     <!-- inizio footer -->
-    <footer></footer>
+    <footer>
+        <div class="container container-footer">
+            <div class="vari">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="lingua"></div>
+        </div>
+    </footer>
 </body>
 
 </html>
