feat: finish header and jumbotron without all animations and arrow problem

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- inizio header -->
     <header>
-        <nav>
+        <div>
             <div class="nav-sx">
                 <ul>
                     <li><img src="img/logo-small.png" alt="logo-dropbox"></li>
@@ -28,24 +28,33 @@
                 <ul>
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
-                    <li>
-                        <div>
-                            <a href="#">Accedi</a>
-                            <a href="#">inizia</a>
-                        </div>
-                    </li>
+                    <li><a href="#">Accedi</a></li>
+                    <li><a class="btn" href="#">inizia</a></li>
                 </ul>
             </div>
-        </nav>
+        </div>
     </header>
     <!-- inizio main -->
     <main>
         <section class="jumbotron">
             <div class="container-jumbo">
-                <div class="jumbo-up"></div>
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="jumbo-down">
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                            posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
+                            e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <br>
+                        <span class="btn">Inizia la tua prova gratuita</span>
+                        <br><br>
+                        <span>Annulla in qualsiasi momento</span>
+                        <div>
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                    </div>
+                    <div><img src="img/jumbo.png" alt=""></div>
                 </div>
             </div>
         </section>
@@ -91,9 +100,9 @@
         </section>
 
         <!-- sesta sezione -->
-         <section class="section-6">
+        <section class="section-6">
             <div class="container-6"></div>
-         </section>
+        </section>
     </main>
     <!-- inizio footer -->
     <footer>
