fix: union section 2-3

--- a/index.html
+++ b/index.html
@@ -60,20 +60,31 @@
         </section>
 
         <!-- seconda sezione -->
-        <section>
-            <div class="container container-2-5">
-                <div class="period"></div>
+        <section class="section-2">
+            <div class="container container-2">
+                <h2>Trova il piano business che fa per te</h2>
+                <ul>
+                    <li>
+                        <div class="pallino1"></div>
+                        <div>Fatturazione mensile</div>
+                    </li>
+                    <li>
+                        <div class="pallino2"></div>
+                        <div>Fatturazione annuale</div>
+                    </li>
+                </ul>
+                <!-- <div class="period"></div> -->
                 <div class="schede">
+                    <div class="piano">
+                        <div>
+                            <i class="fa-solid fa-user"></i> Singolo
+                        </div>
+                    </div>
                     <div class="piano"></div>
                     <div class="piano"></div>
-                    <div class="piano"></div>
+                    <div class="piano piano-big"></div>
                 </div>
             </div>
-        </section>
-
-        <!-- terza sezione -->
-        <section class="section-3">
-            <div class="container-3"></div>
         </section>
 
         <!-- quarta sezione -->
