push per controllo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="section-2">
             <div class="container container-2">
                 <h2>Trova il piano business che fa per te</h2>
-                <ul>
+                <ul class="fatturazione">
                     <li>
                         <div class="pallino1"></div>
                         <div>Fatturazione mensile</div>
@@ -76,8 +76,15 @@
                 <!-- <div class="period"></div> -->
                 <div class="schede">
                     <div class="piano">
-                        <div>
+                        <div class="soggetto">
                             <i class="fa-solid fa-user"></i> Singolo
+                        </div>
+                        <div>
+                            <ul>
+                                <li>Professional</li>
+                                <li>€12.00</li>
+                                <li>/mese</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="piano"></div>
