feat: finish section 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
+    <!-- collegamento icone -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- collegamento font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
@@ -73,23 +78,187 @@
                         <div>Fatturazione annuale</div>
                     </li>
                 </ul>
-                <!-- <div class="period"></div> -->
+                <!--i 4 container  -->
                 <div class="schede">
                     <div class="piano">
-                        <div class="soggetto">
-                            <i class="fa-solid fa-user"></i> Singolo
-                        </div>
                         <div>
-                            <ul>
-                                <li>Professional</li>
-                                <li>€12.00</li>
-                                <li>/mese</li>
-                            </ul>
+                            <div class="soggetto">
+                                <i class="fa-solid fa-user"></i> Singolo
+                            </div>
+                            <div class="info-box">
+                                <ul>
+                                    <li class="tipologia">Professional</li>
+                                    <li class="prezzo">€12.00</li>
+                                    <li class="durata">/mese</li>
+                                </ul>
+                                <ul class="specifiche1">
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-user"></i>
+                                            1 utente
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-folder"></i>
+                                            5 TB di spazio di archiviazione sicuro
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-share-nodes"></i>
+                                            Funzioni di produttività premium e condivisione
+                                            file semplice e sicuro
+                                        </div>
+                                    </li>
+                                </ul>
+                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="underline-span">oppure</span>
+                                <a href="#">acquista ora</a>
+                                <h3>Punti salienti dei piani</h3>
+                                <ul class="specifiche1">
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Invia file fino a 100GB con Dropbox Transfert
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Cartelle offline su dispositivi mobili
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                    <div class="piano"></div>
-                    <div class="piano"></div>
-                    <div class="piano piano-big"></div>
+                    <div class="piano">
+                        <div>
+                            <div class="soggetto">
+                                <i class="fa-solid fa-user"></i> Singolo
+                            </div>
+                            <div class="info-box">
+                                <ul>
+                                    <li class="tipologia">Professional</li>
+                                    <li class="prezzo">€12.00</li>
+                                    <li class="durata">/mese</li>
+                                </ul>
+                                <ul class="specifiche1">
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-user"></i>
+                                            1 utente
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-folder"></i>
+                                            5 TB di spazio di archiviazione sicuro
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-share-nodes"></i>
+                                            Funzioni di produttività premium e condivisione
+                                            file semplice e sicuro
+                                        </div>
+                                    </li>
+                                </ul>
+                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="underline-span">oppure</span>
+                                <a href="#">acquista ora</a>
+                                <h3>Punti salienti dei piani</h3>
+                                <ul class="specifiche1">
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Invia file fino a 100GB con Dropbox Transfert
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Cartelle offline su dispositivi mobili
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="piano">
+                        <div>
+                            <div class="soggetto">
+                                <i class="fa-solid fa-user"></i> Singolo
+                            </div>
+                            <div class="info-box">
+                                <ul>
+                                    <li class="tipologia">Professional</li>
+                                    <li class="prezzo">€12.00</li>
+                                    <li class="durata">/mese</li>
+                                </ul>
+                                <ul class="specifiche1">
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-user"></i>
+                                            1 utente
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-folder"></i>
+                                            5 TB di spazio di archiviazione sicuro
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-share-nodes"></i>
+                                            Funzioni di produttività premium e condivisione
+                                            file semplice e sicuro
+                                        </div>
+                                    </li>
+                                </ul>
+                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="underline-span">oppure</span>
+                                <a href="#">acquista ora</a>
+                                <h3>Punti salienti dei piani</h3>
+                                <ul class="specifiche1">
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Invia file fino a 100GB con Dropbox Transfert
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Cartelle offline su dispositivi mobili
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="piano piano-big">
+                        <div>
+                            <div class="soggetto">
+                                <i class="fa-solid fa-user"></i> Singolo
+                            </div>
+                            <div class="info-box info-box-big">
+                                <ul>
+                                    <li class="enterprise">Enterprise</li>
+                                    <li class="enterprise-sub">
+                                        Contatta l'ufficio vendite per i prezzi
+                                    </li>
+                                </ul>
+                                <span class="btn enterprise-btn">Prova gratis per 30 giorni</span>
+                                <p>
+                                    Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella
+                                    gestione su qualsiasi scala.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
