--- a/index.html
+++ b/index.html
@@ -265,9 +265,17 @@
 
         <!-- quarta sezione -->
         <section class="section-4">
-            <div class="container container-4">
-                <div class="foto"></div>
-                <div class="partner"></div>
+            <div class="container">
+                <div class="foto"><img src="img/partner.png" alt=""></div>
+                <div class="partner">
+                    <h4>
+                        Entra in contatto con un partner Dropbox
+                    </h4>
+                    <p>
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                    </p>
+                    <span class="btn-partner">Trova un partner</span>
+                </div>
             </div>
         </section>
 
