feat: finish section 5

--- a/index.html
+++ b/index.html
@@ -281,15 +281,89 @@
 
         <!-- quinta sezione -->
         <section>
-            <div class="container container-2-5">
-                <div class="titolo"></div>
+            <div class="container container-5">
+                <div class="titolo">
+                    Esegui più operazioni con Dropbox Business
+                </div>
                 <div class="griglia">
-                    <div class="operazioni"></div>
-                    <div class="operazioni"></div>
-                    <div class="operazioni"></div>
-                    <div class="operazioni"></div>
-                    <div class="operazioni"></div>
-                    <div class="operazioni"></div>
+                    <div class="operazione">
+                        <div>
+                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                        </div>
+                        <div>
+                           <h5>
+                            Passa di meno da uno strumento all'altro
+                           </h5> 
+                           <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                           </p>
+                        </div>
+                    </div>
+                    <div class="operazione">
+                        <div>
+                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                        </div>
+                        <div>
+                           <h5>
+                            Passa di meno da uno strumento all'altro
+                           </h5> 
+                           <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                           </p>
+                        </div>
+                    </div>
+                    <div class="operazione">
+                        <div>
+                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                        </div>
+                        <div>
+                           <h5>
+                            Passa di meno da uno strumento all'altro
+                           </h5> 
+                           <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                           </p>
+                        </div>
+                    </div>
+                    <div class="operazione">
+                        <div>
+                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                        </div>
+                        <div>
+                           <h5>
+                            Passa di meno da uno strumento all'altro
+                           </h5> 
+                           <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                           </p>
+                        </div>
+                    </div>
+                    <div class="operazione">
+                        <div>
+                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                        </div>
+                        <div>
+                           <h5>
+                            Passa di meno da uno strumento all'altro
+                           </h5> 
+                           <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                           </p>
+                        </div>
+                    </div>
+                    <div class="operazione">
+                        <div>
+                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                        </div>
+                        <div>
+                           <h5>
+                            Passa di meno da uno strumento all'altro
+                           </h5> 
+                           <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                           </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
