fix: fixed problems and animations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
-                    <li><a class="btn" href="#">inizia</a></li>
+                    <li><div class="btn">inizia</div></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
                         <span class="btn">Inizia la tua prova gratuita</span>
                         <br><br>
                         <span>Annulla in qualsiasi momento</span>
-                        <div>
+                        <div class="arrow">
                             <i class="fa-solid fa-arrow-down"></i>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                     <div class="piano piano-big">
                         <div>
                             <div class="soggetto">
-                                <i class="fa-solid fa-user"></i> Singolo
+                                <i class="fa-solid fa-building"></i> Team
                             </div>
                             <div class="info-box info-box-big">
                                 <ul>
